<resources>
    <string name="app_name">FlowAndLiveDataSample</string>
    <string name="tv_title_login_livedata_activity">LOGIN WITH LIVEDATA</string>
    <string name="hint_edit_text_email">Email</string>
    <string name="hint_edit_text_pwd">senha</string>
    <string name="lbl_login">login</string>
    <string name="lbl_advice_login_livedata_activity">Você deveria usar o Flow API</string>
    <string name="lbl_advice_login_flow_activity">Use Livedata</string>
    <string name="tv_title_login_flow_activity">Login With Coroutine Flow API</string>
    <string name="btn_label_open_login_with_livedata">Activity - Login Com Livedata</string>
    <string name="btn_label_open_login_with_flow">Activity - Login com FlowData</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_label_btn_open_fun_with_rx_kotlin">Activity - FunWithRxJava | Kotlin</string>
    <string name="btn_label_btn_open_fun_with_rx_java">Activity - FunWithRxJava | Java</string>
</resources>
