<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_login_with_livedata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_open_login_with_livedata"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_login_with_flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_open_login_with_flow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login_with_livedata" />

        <Button
            android:id="@+id/btn_open_fun_with_rx_kotlin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_btn_open_fun_with_rx_kotlin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login_with_flow" />

        <Button
            android:id="@+id/btn_open_fun_with_rx_java"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_btn_open_fun_with_rx_java"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_open_fun_with_rx_kotlin" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>